--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  intl: ^0.15.7
+  flutter_html_view: ^0.3.1
+  xml: ^3.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
